# rcli

./: Cargo.toml  README.md  cliff.toml
src/: lib.rs  main.rs  opts.rs  process.rs
src/process/: csv_convert.rs  gen_pass.rs
