[package]
name = "rcli"
version = "0.1.0"
authors = ["Bob <vshader@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.34"
toml = "0.8.14"
zxcvbn = "3.0.1"
